@@ -1,3 +1,11 @@
+2010-06-27  Daniel Kraft  <d@domob.eu>
+
+	* dump-parse-tree.c (show_symbol): Dump target-expression for
+	associate names.
+	(show_code_node): Make distinction between BLOCK and ASSOCIATE.
+	(show_namespace): Use show_level for correct indentation of
+	"inner namespaces" (contained procedures or BLOCK).
+
 2010-06-27  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/44678
